--- a/задание к теме 4/vvp4/vvp4.vcxproj.filters
+++ b/задание к теме 4/vvp4/vvp4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задание 1.cpp">
+    <ClCompile Include="vvp4.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
